--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@types/node-sass": "^4.11.3",
+    "cypress": "^10.3.1",
     "node-sass": "^7.0.1",
     "npm-run-all": "^4.1.5"
   },
